--- a/public/main.html
+++ b/public/main.html
@@ -31,7 +31,7 @@
   <!-- Color the status bar on mobile devices -->
   <meta name="theme-color" content="#2F3BA2">
 
-  <link rel="stylesheet" href="css/vendor/normalize.min.css"/>
+  <!--<link rel="stylesheet" href="css/vendor/normalize.min.css"/>-->
 
   <!-- Roboto Fonts -->
   <link rel="stylesheet" href="css/vendor/roboto.css">
